Cover letter and docker compose added